--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 click==8.0.3
 colorama==0.4.4
-dataclasses==0.6
 Flask==2.0.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-pip==21.3.1
-setuptools==59.4.0
-Werkzeug==2.0.1
-wheel==0.37.0
+python-dotenv==0.19.2
+Werkzeug==2.0.2
