--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
+apispec==5.1.1
+attrs==21.2.0
 click==8.0.3
 colorama==0.4.4
+flasgger==0.9.5
 Flask==2.0.2
+flask-marshmallow==0.14.0
+greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+jsonschema==4.2.1
 MarkupSafe==2.0.1
+marshmallow==3.14.1
+marshmallow-sqlalchemy==0.26.1
+mistune==2.0.0
+psycopg2==2.9.2
+pyrsistent==0.18.0
 python-dotenv==0.19.2
+PyYAML==6.0
+six==1.16.0
+SQLAlchemy==1.4.28
 Werkzeug==2.0.2
