--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 apispec==5.1.1
 attrs==21.2.0
+beautifulsoup4==4.10.0
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
 flasgger==0.9.5
@@ -7,9 +11,11 @@ Flask==2.0.2
 flask-marshmallow==0.14.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 jsonschema==4.2.1
+lxml==4.7.1
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.26.1
@@ -18,6 +24,9 @@ psycopg2==2.9.2
 pyrsistent==0.18.0
 python-dotenv==0.19.2
 PyYAML==6.0
+requests==2.27.1
 six==1.16.0
+soupsieve==2.3.1
 SQLAlchemy==1.4.28
+urllib3==1.26.8
 Werkzeug==2.0.2
