--- a/requirements.txt
+++ b/requirements.txt
@@ -7,26 +7,35 @@ charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
 flasgger==0.9.5
-Flask==2.0.2
+Flask==2.2.2
+flask-alchemydumps==0.0.13
 flask-marshmallow==0.14.0
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==5.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 jsonschema==4.2.1
 lxml==4.7.1
-MarkupSafe==2.0.1
+MarkupSafe==2.1.1
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.26.1
 mistune==2.0.0
+pip==20.2.3
 psycopg2==2.9.2
 pyrsistent==0.18.0
+python-decouple==3.6
 python-dotenv==0.19.2
 PyYAML==6.0
 requests==2.27.1
+scrapers==1.35
+setuptools==49.2.1
 six==1.16.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.28
+Unidecode==1.3.2
 urllib3==1.26.8
-Werkzeug==2.0.2
+Werkzeug==2.2.2
+zipp==3.11.0
