--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,120 @@
+anyio==3.6.2
 apispec==5.1.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.2.1
 attrs==21.2.0
+backcall==0.2.0
 beautifulsoup4==4.10.0
+bleach==5.0.1
 bs4==0.0.1
 certifi==2021.10.8
+cffi==1.15.1
 charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
+comm==0.1.2
+contourpy==1.0.6
+cycler==0.11.0
+debugpy==1.6.4
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.2
 flasgger==0.9.5
 Flask==2.2.2
 flask-alchemydumps==0.0.13
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
+fonttools==4.38.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==5.1.0
+ipykernel==6.19.2
+ipython==8.7.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.3
 itsdangerous==2.0.1
+jedi==0.18.2
 Jinja2==3.0.3
+joblib==1.2.0
 jsonschema==4.2.1
+jupyter==1.0.0
+jupyter-client==7.4.8
+jupyter-console==6.4.4
+jupyter-core==5.1.0
+jupyter-events==0.5.0
+jupyter-server==2.0.1
+jupyter-server-terminals==0.4.2
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.4
+kiwisolver==1.4.4
 lxml==4.7.1
 MarkupSafe==2.1.1
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.26.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
 mistune==2.0.0
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.6
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook-shim==0.2.2
+numpy==1.23.5
+packaging==22.0
+pandas==1.5.2
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.3.0
 pip==20.2.3
+platformdirs==2.6.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
 psycopg2==2.9.2
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.13.0
+pyparsing==3.0.9
 pyrsistent==0.18.0
+python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.19.2
+python-json-logger==2.0.4
+pytz==2022.6
+pywin32==305
+pywinpty==2.0.9
 PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.4.0
+QtPy==2.3.0
 requests==2.27.1
+scikit-learn==1.2.0
+scipy==1.9.3
 scrapers==1.35
+Send2Trash==1.8.0
 setuptools==49.2.1
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.28
+stack-data==0.6.2
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.7.0
 Unidecode==1.3.2
 urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.2
 Werkzeug==2.2.2
+widgetsnbextension==4.0.4
 zipp==3.11.0
