--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.18.0
+pytest==7.2.1
 python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.19.2
